--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ bincode = "1.3"
 bytes = "1.1"
 num-derive = "0.3"
 num-traits= "0.2"
+thiserror = "1.0"
+regex = "1.5"
 
 [[bin]]
 name = "server"
