--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,13 @@ edition = "2018"
 
 [dependencies]
 cursive = "0.16"
-bincode = "1.3"
+#bincode = "1.3"
 bytes = "1.1"
 num-derive = "0.3"
 num-traits= "0.2"
 thiserror = "1.0"
 regex = "1.5"
+lazy_static = "1.4"
 
 [[bin]]
 name = "server"
