--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ edition = "2018"
 cursive = "0.16"
 #bincode = "1.3"
 bytes = "1.1"
-num-derive = "0.3"
-num-traits= "0.2"
+#num-derive = "0.3"
+#num-traits= "0.2"
+num_enum = "0.5"
 thiserror = "1.0"
 regex = "1.5"
 lazy_static = "1.4"
