--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 cursive = "0.16"
+cursive-tabs = "0.6"
 #bincode = "1.3"
 bytes = "1.1"
 #num-derive = "0.3"
@@ -30,3 +31,7 @@ path = "src/client/client_main.rs"
 [lib]
 name = "irclib"
 path = "src/lib.rs"
+
+[[bin]]
+name = "curs"
+path = "src/curs.rs"
